--- a/build.properties
+++ b/build.properties
@@ -1,27 +1,30 @@
 
-	<!-- Configurable build properties -->
-	
-	AUTHOR			= Justin Windle
+<!-- Configurable build properties -->
 
-	SRC_DIR			= src
-	LIB_DIR			= lib
-	DOCS_DIR		= docs
-	BUILD_DIR		= build
-	
-	JS_DIR			= js
-	CSS_DIR			= css
+AUTHOR			= 
 
-	OUTPUT_SRC_JS	= ${JS_DIR}/scripts.js
-	OUTPUT_LIB_JS	= ${JS_DIR}/lib/scripts.js
-	
-	OUTPUT_SRC_CSS	= ${CSS_DIR}/styles.css
-	OUTPUT_LIB_CSS	= ${CSS_DIR}/lib/styles.css
-	
-	EXTERNS			= ${SRC_DIR}/${JS_DIR}/externs.js
-	COMPILATION		= advanced
-	WARNINGS		= verbose
-	
-	ANT_CONTRIB		= ${LIB_DIR}/ant-contrib.jar
-	COMPRESSOR		= ${LIB_DIR}/yuicompressor-2.4.7.jar
-	COMPILER		= ${LIB_DIR}/compiler.jar
-	JSDOC			= ${LIB_DIR}/jsdoc
+SRC_DIR			= src
+LIB_DIR			= lib
+DOCS_DIR		= docs
+BUILD_DIR		= build
+
+JS_DIR			= js
+CSS_DIR			= css
+
+OUTPUT_SRC_JS	= ${JS_DIR}/scripts.js
+OUTPUT_LIB_JS	= ${JS_DIR}/lib/scripts.js
+
+OUTPUT_SRC_CSS	= ${CSS_DIR}/styles.css
+OUTPUT_LIB_CSS	= ${CSS_DIR}/lib/styles.css
+
+NAMESPACE		= namespace.project
+EXTERNS			= ${SRC_DIR}/${JS_DIR}/externs.js
+DEPS			= ${SRC_DIR}/${JS_DIR}/deps.js
+COMPILATION		= ADVANCED_OPTIMIZATIONS
+WARNINGS		= verbose
+DEBUG			= false
+
+ANT_CONTRIB		= ${LIB_DIR}/ant-contrib.jar
+COMPRESSOR		= ${LIB_DIR}/yuicompressor-2.4.7.jar
+COMPILER		= ${LIB_DIR}/compiler.jar
+JSDOC			= ${LIB_DIR}/jsdoc
