--- a/build.properties
+++ b/build.properties
@@ -17,7 +17,7 @@ OUTPUT_LIB_JS	= ${JS_DIR}/lib/scripts.js
 OUTPUT_SRC_CSS	= ${CSS_DIR}/styles.css
 OUTPUT_LIB_CSS	= ${CSS_DIR}/lib/styles.css
 
-NAMESPACE		= namespace.project
+APP_NAMESPACE	= namespace.project
 EXTERNS			= ${SRC_DIR}/${JS_DIR}/externs.js
 DEPS			= ${SRC_DIR}/${JS_DIR}/deps.js
 COMPILATION		= ADVANCED_OPTIMIZATIONS
