--- a/build.properties
+++ b/build.properties
@@ -17,12 +17,9 @@ OUTPUT_LIB_JS	= ${JS_DIR}/lib/scripts.js
 OUTPUT_SRC_CSS	= ${CSS_DIR}/styles.css
 OUTPUT_LIB_CSS	= ${CSS_DIR}/lib/styles.css
 
-APP_NAMESPACE	= namespace.project
 EXTERNS			= ${SRC_DIR}/${JS_DIR}/externs.js
-DEPS			= ${SRC_DIR}/${JS_DIR}/deps.js
-COMPILATION		= ADVANCED_OPTIMIZATIONS
+COMPILATION		= advanced
 WARNINGS		= verbose
-DEBUG			= false
 
 ANT_CONTRIB		= ${LIB_DIR}/ant-contrib.jar
 COMPRESSOR		= ${LIB_DIR}/yuicompressor-2.4.7.jar
