--- a/build.xml
+++ b/build.xml
@@ -35,7 +35,7 @@
 		
 	-->
 	
-	<property name="pages" value="**/*.htm,**/*.html,**/*.php,**/*.asp,**/*.aspx" />
+	<property name="pages" value="**/*.htm,**/*.html,**/*.php,**/*.phtml,**/*.asp,**/*.aspx" />
 	
 	<!--
 	
